test/example/controller/error/handler/throw_from_model.js
'use strict';

module.exports = {
  get: async controller => controller.model.test.error.throwFromMethod(),
};
